@startuml

title __SRC's Class Diagram__\n


    class Hangman {
        + init()
        {static} + main()
        + run()
        - createHint()
        - displayHangman()
        - getRandomWord()
        - graphicType()
        - intro()
        - playOneGame()
        - readGuess()
        - stats()
    }

  


    class HangmanCanvas {
        {static} - TEXT_HEIGHT : int
        {static} - TEXT_X_OFFSET : int
        - scan : Scanner
        - textX : int
        - textY : int
        + clear()
        + display()
        + displayG()
        + image()
        + printText()
        + reset()
    }

  

  Hangman -up-|> acm.program.ConsoleProgram
  Hangman o-- HangmanCanvas : canvas
  HangmanCanvas -up-|> acm.graphics.GCanvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
